package io.github.ioni5.controllers;

public enum StateValue {
    INITIAL,
    IN_GAME,
    RESUME,
    EXIT
}
