package io.github.ioni5.views.gui;

import io.github.ioni5.controllers.Controller;

public class View extends io.github.ioni5.views.View {

    @Override
    public void interact(Controller controller) {
        // TODO
        
    }
    
}
